--- a/thesis/cover.tex
+++ b/thesis/cover.tex
@@ -47,7 +47,7 @@
 % Libraries before printing your final copy.
 \title{An Efficient Score Alignment Algorithm and its Applications}
 
-\author{Emily Zhang}
+\author{Emily H. Zhang}
 % If you wish to list your previous degrees on the cover page, use the 
 % previous degrees command:
 %       \prevdegrees{A.A., Harvard University (1985)}
@@ -124,11 +124,14 @@
 \cleardoublepage
 
 \section*{Acknowledgments}
+I'd like to thank my advisor, Professor Michael Cuthbert for not only advising me on this project but also for providing invaluable feedback and encouragement throughout. I am extremely grateful that I had the opportunity to combine my love of computer science and music by contributing to the \texttt{music21} project. It has been a rewarding experience working with you.
 
-readers:
-colin m
-katie g
-jonathan m
+I'd like to thank the Music and Theater Arts Department for its support in both my musical education and for giving me so many opportunities to explore music from many different approaches, my thesis work being one of them. 
+
+Thank you to all who provided me with moral support, feedback, and food during this project, including Maryam K., Cathie Y., Priya P., Allison Z., Colin M., Jonathan M., Peter G., Katie G., Dan P., Michelle Q., Brian M., Harry B., and Katie L.
+
+Finally, I'd like to my family, especially my sister Allison, whose unwavering support have helped me succeed in my endeavors at MIT. 
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % -*-latex-*-
