--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -97,6 +97,18 @@
   month={Feb}, 
   pages={173--190}}
 
+@article{needleman, 
+  title={{A general method applicable to the search for similarities in the amino acid sequence of two proteins}}, 
+  volume={48}, 
+  DOI={10.1016/0022-2836(70)90057-4}, 
+  number={3}, 
+  journal={Journal of Molecular Biology}, 
+  author={Needleman, Saul B. and Wunsch, Christian D.}, 
+  year={1970}, 
+  month={March}, 
+  pages={443-- 453}}
+
+
 @phdthesis{white,
   author       = {White, Christopher Wm.}, 
   title        = {Some statistical properties of tonality, 1650-1900},
@@ -139,9 +151,4 @@
   howpublished = {\url{http://web.mit.edu/music21/}}
 }
 
-@misc{yeti,
-  title = {{Yeti Levenshtein Python Extension}},
-  author={Haapala, Antti},
-  howpublished = {\url{https://pypi.python.org/pypi/python-Levenshtein/0.12.0}}
-}
 
