--- a/thesis/appb.tex
+++ b/thesis/appb.tex
@@ -1,27 +1,54 @@
-\chapter{Alignment Visualization of Violin 1 part in K.160}\label{appb}
-
+\chapter{Alignment Visualization of K.525}\label{appb}
 \clearpage
 
 \begin{figure}[H]
 \centering
-\includegraphics[width =.95\textwidth]{K160_MIDI_Violin_1-1}
-\caption{Post-alignment visualization of the MIDI Violin 1 part in K.160.}
-\label{fig:k160postalignv1midi}
+\includegraphics[width =.9\textwidth]{K525_I_MIDI_Violin_1-1}
+\caption[K.525- I.Allegro MIDI Violin 1 alignment]{Post-alignment visualization of an excerpt of the MIDI Violin 1 part in K.525- I.Allegro.}
 \end{figure}
 
 \begin{figure}[H]
 \centering
-\includegraphics[width =.95\textwidth]{K160_OMR_Violin_1-1}
-\caption{Post-alignment visualization of the OMR Violin 1 part in K.160.}
-\label{fig:k160postalignv1omr}
+\includegraphics[width =.95\textwidth]{K525_I_OMR_Violin_1-1}
+\caption[K.525- I.Allegro OMR Violin 1 alignment]{Post-alignment visualization of an excerpt of the OMR Violin 1 part in K.525- I.Allegro.}
 \end{figure}
 
 \begin{figure}[H]
 \centering
-\includegraphics[width =.95\textwidth]{K160_Violin_1_Part_OMR_Enharmonic_Fixer-1}
-\caption{Post-enharmonic and pitch fixing visualization of the OMR Violin 1 part in K.160.}
-\label{fig:k160postfixv1}
+\includegraphics[width =.95\textwidth]{K525_I_MIDI_Violin_2-1}
+\caption[K.525- I.Allegro MIDI Violin 2 alignment]{Post-alignment visualization of an excerpt of the MIDI Violin 2 part in K.525- I.Allegro.}
 \end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K525_I_OMR_Violin_2-1}
+\caption[K.525- I.Allegro OMR Violin 2 alignment]{Post-alignment visualization of an excerpt of the OMR Violin 2 part in K.525- I.Allegro.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K525_I_MIDI_Viola-1}
+\caption[K.525- I.Allegro MIDI Viola alignment]{Post-alignment visualization of an excerpt of the MIDI Viola part in K.525- I.Allegro.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K525_I_OMR_Viola-1}
+\caption[K.525- I.Allegro OMR Viola alignment]{Post-alignment visualization of an excerpt of the OMR Viola part in K.525- I.Allegro.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K525_I_MIDI_Cello-1}
+\caption[K.525- I.Allegro MIDI Cello alignment]{Post-alignment visualization of an excerpt of the MIDI Cello part in K.525- I.Allegro.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K525_I_OMR_Cello-1}
+\caption[K.525- I.Allegro OMR Cello alignment]{Post-alignment visualization of an excerpt of the OMR Cello and Bass part in K.525.}
+\end{figure}
+
 
 \clearpage
 \newpage
