--- a/thesis/chap3.tex
+++ b/thesis/chap3.tex
@@ -1,8 +1,35 @@
 \chapter{Previous Work}
+This chapter discusses previous work in musical sequence representation, alignment, and correction. The first half of the chapter is about work by others. The second half is my own previous work that was relevant to this thesis. 
 
-The work of my thesis uses the universal Hasher for digital representations of music tool. This work was largely done in the Spring of 2015 as part of my undergraduate capstone supervised independent study (6.UAP). Additionally, experimental results in a related project, which focused on speeding up musical comparison by converting Python objects to C objects, provide evidence that the bottleneck in musical sequence alignment is not in the comparison step. Both subjects are described in more detail below but only to the extent necessary to understand the work of my thesis.
+\section{Related Work by Others}
+In this section of work by others, 
+\subsection{Typke: Music Retrieval based on Melodic Similarity}
+Typke's thesis on Music Retrieval based on Melodic Similarity gives an example of how music can be transformed and compressed into its most relevant features \cite{typke}. Here, Typke proposes encoding music into what he calls a ``weighted point set" in a two-dimensional space of time and pitch before measuring any sort of melodic similarity between music. A note in a piece is represented as point set of pitch (in the Hewlett 40 system \cite{hewlett}) and an offset in quarter notes from the beginning of the piece. This representation allows for notes to be easily compared with each other. Since the features of notes are represented as numbers, it is convenient to do numerical operations with the representations. 
 
-\section{A Modular Universal Hasher} \label{hasher}
+\subsection{Church and Cuthbert: Rhythmic Comparison and Alignment}
+Church and Cuthbert \cite{church} describe a system that hashes scores purely on rhythm and uses heuristics of rhythm in music (e.g. a repeated rhythm should be the same every time it is expected to repeat) to correct OMR scores. This model was the original inspiration for building an alignment system with more heuristics pertaining to the qualities of music beyond just rhythm to further improve OMR accuracy.
+
+\subsection{IMSLP}
+IMSLP holds a large collection of musical scores (currently over 350,000), many of which are user contributed (i.e. not necessarily verified correct) \cite{imslp}. However, its contents are free and in the public domain. My work makes use of this large dataset. 
+
+\subsection{Viro: Peachnote, Musical Score Search and Analysis}
+Peachnote \cite{peachnote} is a project that contains a large bodyof musical scores. Peachnote performs OMR over the PDF scores in IMSLP and indexes the data for efficient querying and searching.  
+
+\subsection{White: Statistical Properties of Music and MIDI}
+White's dissertation \cite{white} describes properties of music that can be turned into heuristics for refining algorithmic analysis of music. Specifically, he builds upon Temperley's 1997 \cite{temperley} paper's details of harmonic analysis of MIDI and refers to other research that has been constructive towards Temperley's model. White does say that Temperley's algorithm fails when faced with ambiguity, such as in MIDI differentiating between enharmonic tones. The hope is that by combining the ambiguous parts of MIDI with the probabilistic and rigorous details of OMR scores, ambiguities in MIDI tonality can be resolved. In addition, White also cites a large repository of high quality MIDI files. 
+
+\subsection{Rebelo et al: Optical Music Recognition - State-of-the-Art and Open Issues}
+Rebelo et al's paper discusses the state of the art of OMR at each step of the OMR process and proposes future work in certain areas that would advance the current state of OMR \cite{rebelo}.
+
+\subsection{OpenScore}
+OpenScore is a project that aims to liberate all public domain music using both human and computer-powered techniques. Many works in the public domain are of low quality and/or are in formats that do not lend well to analysis, sharing, or reproducing, and OpenScore plans to turn them into high-quality music in digital formats. Both humans and computer software can aid in any part of the process, from transcription to error correction. The work of my thesis can directly contribute to the computer software tools that OpenSource is looking for. 
+
+\subsection{\texttt{music21}}
+\texttt{music21} is a open source Python library that is a toolkit for computer-aided musicology. It provides both a framework for representation of music as well as tools to perform analyses on music. The rhythm correctors built by Church and Cuthbert were made using the tools that \texttt{music21} provides. The work of my thesis relies heavily on the infrastructure of\texttt{music21}, its score and stream representations and their operations. 
+
+\section{Previous Work: A Modular Universal Hasher} \label{hasher}
+The work of my thesis uses the universal \texttt{Hasher} for digital representations of music tool. This work was largely done in the Spring of 2015 as part of my undergraduate capstone supervised independent study (6.UAP). 
+
 Prior to my work on building a musical sequence aligner and fixer, I built a hasher with the specific intention that it would be able  to adapt according to different specification settings decided by the programmer. The programmer decides which kinds of \texttt{music21} stream elements, such as notes and chords, and properties, such as pitch name or duration, are relevant to their hash, and selects them to build a specific instance of a \texttt{Hasher} object. This \texttt{Hasher} instance can then be used to produce a hash from any \texttt{music21} stream. 
 
 \subsection{Why Musical Comparison and Alignment Needs a Modular Hashing Function}
@@ -103,10 +130,10 @@ There are several system-wide high level settings that must first be set before 
         \subsubsection{Hashing: Building \texttt{finalHash}}
         If \texttt{includeReference} is set to \texttt{False}, then each new \texttt{NoteHash} object is directly added to \texttt{finalHash}. If \texttt{includeReference} is \texttt{True}, then each \texttt{NoteHash} gets replaced with a \texttt{NoteHashWithReference} object that includes a reference to the original stream element, and that gets added to \texttt{finalHash} instead.
     
-\section{Low-level Object Comparison Optimizations} \label{spaceoptimizations}
+\section{Previous Work: Low-level Object Comparison Optimizations} \label{spaceoptimizations}
 Work during the fall of 2015 focused on optimizing the comparison process with variable-length data. The underlying idea was that Python objects tend to have more overhead than C objects, and if comparison and alignment algorithms were going to be doing a lot of comparisons between \texttt{NoteHash} objects produced by the Hasher, then converting these Python objects into C objects of appropriate size could save a lot of time. Here, ``appropriate size'' refers to the idea that NoteHash objects with only a few hashed properties would correspond to smaller C objects, and \texttt{NoteHash} objects with more hashed properties would correspond to larger C objects. 
 
-A smart implementation of the most efficient method, Yeti Levenshtein, already exists in C, so my work was to cleverly convert variable-length \texttt{NoteHash} Python objects to C objects to use the Yeti Levenshtein library\cite{yeti}, which I hoped would be faster than using any Python edit distance algorithm.
+A smart implementation of the most efficient method, Yeti Levenshtein, already exists in C, so my work was to cleverly convert variable-length \texttt{NoteHash} Python objects to C objects to use the Yeti Levenshtein library, which I hoped would be faster than using any Python edit distance algorithm.
 
 I observed that the speedup we gained in converting variable-length NoteHash Python objects to C objects to use this library was a negligible cost compared to the run time of the comparison algorithm. This empirical evidence suggested that massive parallelization and speedup of the comparison process is difficult and that optimizations in alignment would be the key to significant speedup.
 
