--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -34,7 +34,10 @@
 \usepackage{minted}
 \usepackage{graphicx, float}
 \usepackage{url} 
+\usepackage{sectsty}
+\allsectionsfont{\raggedright}
 \graphicspath{ {images/} }
+
 %% These have been added at the request of the MIT Libraries, because
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
 \usepackage{cmap}
@@ -45,7 +48,7 @@
 \usepackage[table,xcdraw]{xcolor}
 \pagestyle{plain}
 \interfootnotelinepenalty=10000
-
+\allsectionsfont{\raggedright}
 \setcounter{tocdepth}{4}
 \setcounter{secnumdepth}{4}
 
@@ -74,6 +77,7 @@
 \appendix
 \include{appa}
 \include{appb}
+\include{appc}
 \include{biblio}
 \end{document}
 
